--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "classnames": "^2.2.6",
     "google-auth-library": "^3.1.0",
     "googleapis": "^37.2.0",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
