--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "doug-score",
+  "name": "dashboard-ts-tmp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "classnames": "^2.2.6",
-    "google-auth-library": "^3.1.0",
-    "googleapis": "^37.2.0",
-    "lodash": "^4.17.11",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5",
-    "react-table": "^6.9.2"
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
+    "google-auth-library": "^5.2.2",
+    "googleapis": "^43.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
+    "react-table": "^6.10.3",
+    "typescript": "3.6.3"
+  },
+  "devDependencies": {
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.50",
+    "@types/gapi.client.sheets": "^4.0.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-table": "^6.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,10 +32,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
